[gd_scene load_steps=20 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/bubble_low_res.png" type="Texture" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/light.png" type="Texture" id=7]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=8]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=9]
[ext_resource path="res://art/Picked Coin Echo 2.wav" type="AudioStream" id=10]
[ext_resource path="res://art/warning.wav" type="AudioStream" id=11]
[ext_resource path="res://art/cave themeb4.ogg" type="AudioStream" id=12]
[ext_resource path="res://art/splash.wav" type="AudioStream" id=13]
[ext_resource path="res://art/win.wav" type="AudioStream" id=14]

[sub_resource type="Curve" id=1]
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 400, 2, 2 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.1
orbit_velocity = 0.02
orbit_velocity_random = 0.36
linear_accel = 0.01
scale = 1.5
scale_random = 1.0
hue_variation = -0.03
hue_variation_random = 0.17
anim_speed = 15.58
anim_speed_random = 0.33
anim_speed_curve = SubResource( 2 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 32.896, 35.0107, 0, 0, 0, 0, 446.044, 39.1421, 0, 0, 0, 0, 449.349, 676.216, 0, 0, 0, 0, 33.7223, 674.564, 0, 0, 0, 0, 32.896, 35.0107 )
}

[sub_resource type="GDScript" id=5]
script/source = "extends Light2D


# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
    pass
"

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )
Coin = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
editor/display_folded = true
margin_right = 483.0
margin_bottom = 724.0
color = Color( 0.211765, 0.545098, 0.411765, 1 )

[node name="Bubbles" type="Particles2D" parent="ColorRect"]
light_mask = 0
position = Vector2( 232.959, 703.148 )
scale = Vector2( 0.2, 0.2 )
amount = 30
lifetime = 53.07
preprocess = 2.0
speed_scale = 2.0
explosiveness = 0.3
randomness = 0.2
visibility_rect = Rect2( 0, 0, 400, 720 )
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 245.623, 332.867 )
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 4 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 32.896, 35.0107 )
rotation = 0.010001

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 234.215, -19.4619 )
scale = Vector2( 1.48104, 1.48104 )
texture = ExtResource( 7 )
energy = 0.7
shadow_enabled = true
shadow_color = Color( 0.286275, 0.901961, 0.831373, 0 )
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.1
script = SubResource( 5 )

[node name="CoinTimer" type="Timer" parent="."]
one_shot = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 10 )

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="CoinAppearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -11.702

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
[connection signal="collectedCoin" from="Player" to="." method="_on_Player_collectedCoin"]
[connection signal="hit" from="Player" to="." method="player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_CoinTimer_timeout"]
